src/test/deca/syntax/invalid/class/method/missing_parameter_type_11.deca
// Description:
//    Tests a syntactically incorrect program for a method declaration missing a parameter type
//
// Results:
//    Line 11 : Error, expected parameter type.
//
// History:
//    created on 07/01/2025

class TestClass {
    void methodName(a) {
        int b = 10;
    }
}